Some mekanism ctm changes

--- a/DevTSKAll/sources_files.cfg
+++ b/DevTSKAll/sources_files.cfg
@@ -451,10 +451,9 @@ assets.mekanism.gui.factory.GuiAdvancedFactory = *project*
 assets.mekanism.gui.factory.GuiBasicFactory = *project*
 assets.mekanism.gui.factory.GuiEliteFactory = *project*
 assets.mekanism.gui.GuiSolarEvaporationController = *project*
-assets.mekanism.gui.nei.GuiChemicalWasher = *project*
 assets.mekanism.infuse.Infusions = *project*
-assets.mekanism.lang.en_GB = *project*
-assets.mekanism.lang.en_US = *project*
+assets.mekanism.lang.en_GB = *vanilla*
+assets.mekanism.lang.en_US = *vanilla*
 assets.mekanism.render.AdvancedSolarGenerator = *project*
 assets.mekanism.render.AtomicDisassembler = *project*
 assets.mekanism.render.Balloon = *project*
@@ -561,23 +560,6 @@ assets.mekanism.textures.blocks.EnrichmentChamberFrontOff = *project*
 assets.mekanism.textures.blocks.EnrichmentChamberFrontOn = *project*
 assets.mekanism.textures.blocks.Ethene = *project*
 assets.mekanism.textures.blocks.GlowPlasticBlock = *project*
-assets.mekanism.textures.blocks.LiquidBrine = *project*
-assets.mekanism.textures.blocks.LiquidChlorine = *project*
-assets.mekanism.textures.blocks.LiquidCleanOre = *project*
-assets.mekanism.textures.blocks.LiquidEnergy = *project*
-assets.mekanism.textures.blocks.LiquidEnergyStatic = *project*
-assets.mekanism.textures.blocks.LiquidEthene = *project*
-assets.mekanism.textures.blocks.LiquidHydrogen = *project*
-assets.mekanism.textures.blocks.LiquidHydrogenChloride = *project*
-assets.mekanism.textures.blocks.LiquidLithium = *project*
-assets.mekanism.textures.blocks.LiquidOre = *project*
-assets.mekanism.textures.blocks.LiquidOsmium = *project*
-assets.mekanism.textures.blocks.LiquidOxygen = *project*
-assets.mekanism.textures.blocks.LiquidSodium = *project*
-assets.mekanism.textures.blocks.LiquidStone = *project*
-assets.mekanism.textures.blocks.LiquidSulfurDioxide = *project*
-assets.mekanism.textures.blocks.LiquidSulfuricAcid = *project*
-assets.mekanism.textures.blocks.LiquidSulfurTrioxide = *project*
 assets.mekanism.textures.blocks.models.DiversionTransporter = *project*
 assets.mekanism.textures.blocks.models.DiversionTransporterHorizontal = *project*
 assets.mekanism.textures.blocks.models.DiversionTransporterVertical = *project*
@@ -670,7 +652,6 @@ assets.mekanism.textures.blocks.Teleporter = *project*
 assets.mekanism.textures.blocks.TeleporterFrame = *project*
 assets.mekanism.textures.blocks.TinBlock = *project*
 assets.mekanism.textures.blocks.TinOre = *project*
-assets.mekanism.textures.blocks.WaterVapor = *project*
 assets.mekanism.textures.items.AdvancedControlCircuit = *project*
 assets.mekanism.textures.items.AdvancedFactoryInstaller = *project*
 assets.mekanism.textures.items.AtomicAlloy = *project*
@@ -1453,3 +1434,69 @@ assets.mekanism.textures.blocks.overlay.overlay_purple = *vanilla*
 assets.mekanism.textures.blocks.overlay.overlay_red = *vanilla*
 assets.mekanism.textures.blocks.overlay.overlay_white = *vanilla*
 assets.mekanism.textures.blocks.overlay.overlay_yellow = *vanilla*
+assets.mekanism.lang.de_DE = *vanilla*
+assets.mekanism.lang.en_ZA = *vanilla*
+assets.mekanism.lang.fr_FR = *vanilla*
+assets.mekanism.lang.it_IT = *vanilla*
+assets.mekanism.lang.ja_JP = *vanilla*
+assets.mekanism.lang.ko_KR = *vanilla*
+assets.mekanism.lang.no_NO = *vanilla*
+assets.mekanism.lang.pl_PL = *vanilla*
+assets.mekanism.lang.pt_BR = *vanilla*
+assets.mekanism.lang.ru_RU = *vanilla*
+assets.mekanism.lang.zh_CN = *vanilla*
+assets.mekanism.lang.zh_TW = *vanilla*
+assets.mekanism.particles.laser = *vanilla*
+assets.mekanism.render.FadedSphere = *vanilla*
+assets.mekanism.render.NullArmor = *vanilla*
+assets.mekanism.render.SideConfigOverlay = *vanilla*
+assets.mekanism.render.white = *vanilla*
+assets.mekanism.sounds.cj.CJ_1 = *vanilla*
+assets.mekanism.sounds.cj.CJ_2 = *vanilla*
+assets.mekanism.sounds.cj.CJ_3 = *vanilla*
+assets.mekanism.sounds.cj.CJ_4 = *vanilla*
+assets.mekanism.sounds.cj.CJ_5 = *vanilla*
+assets.mekanism.sounds.cj.CJ_6 = *vanilla*
+assets.mekanism.sounds.cj.CJ_7 = *vanilla*
+assets.mekanism.sounds.cj.CJ_8 = *vanilla*
+assets.mekanism.sounds.etc.Beep = *vanilla*
+assets.mekanism.sounds.etc.Click = *vanilla*
+assets.mekanism.sounds.etc.Ding = *vanilla*
+assets.mekanism.sounds.etc.Error = *vanilla*
+assets.mekanism.sounds.etc.GasMask = *vanilla*
+assets.mekanism.sounds.etc.Hydraulic = *vanilla*
+assets.mekanism.sounds.etc.Pop = *vanilla*
+assets.mekanism.sounds.etc.Success = *vanilla*
+assets.mekanism.sounds.holiday.Nutcracker1 = *vanilla*
+assets.mekanism.sounds.holiday.Nutcracker2 = *vanilla*
+assets.mekanism.sounds.holiday.Nutcracker3 = *vanilla*
+assets.mekanism.sounds.holiday.Nutcracker4 = *vanilla*
+assets.mekanism.sounds.holiday.Nutcracker5 = *vanilla*
+assets.mekanism.sounds.BioGenerator = *vanilla*
+assets.mekanism.sounds.Chargepad = *vanilla*
+assets.mekanism.sounds.ChemicalCrystallizer = *vanilla*
+assets.mekanism.sounds.ChemicalDissolutionChamber = *vanilla*
+assets.mekanism.sounds.ChemicalInfuser = *vanilla*
+assets.mekanism.sounds.ChemicalInjectionChamber = *vanilla*
+assets.mekanism.sounds.ChemicalOxidizer = *vanilla*
+assets.mekanism.sounds.ChemicalWasher = *vanilla*
+assets.mekanism.sounds.Combiner = *vanilla*
+assets.mekanism.sounds.Compressor = *vanilla*
+assets.mekanism.sounds.Crusher = *vanilla*
+assets.mekanism.sounds.EnrichmentChamber = *vanilla*
+assets.mekanism.sounds.FlamethrowerActive = *vanilla*
+assets.mekanism.sounds.FlamethrowerIdle = *vanilla*
+assets.mekanism.sounds.FusionReactor = *vanilla*
+assets.mekanism.sounds.GasGenerator = *vanilla*
+assets.mekanism.sounds.GasMask = *vanilla*
+assets.mekanism.sounds.HeatGenerator = *vanilla*
+assets.mekanism.sounds.Jetpack = *vanilla*
+assets.mekanism.sounds.Laser = *vanilla*
+assets.mekanism.sounds.MetallurgicInfuser = *vanilla*
+assets.mekanism.sounds.PrecisionSawmill = *vanilla*
+assets.mekanism.sounds.PressurizedReactionChamber = *vanilla*
+assets.mekanism.sounds.PurificationChamber = *vanilla*
+assets.mekanism.sounds.Smelter = *vanilla*
+assets.mekanism.sounds.SolarGenerator = *vanilla*
+assets.mekanism.sounds.WindTurbine = *vanilla*
+assets.mekanism.textures.blocks.models.GlowPanel = *vanilla*
