--- a/DevTSKAll/sources_groups.cfg
+++ b/DevTSKAll/sources_groups.cfg
@@ -1,2 +1,8 @@
 assets = *project*
 assets.mekanism.textures.blocks.overlay = *vanilla*
+assets.mekanism.lang = *vanilla*
+assets.mekanism.particles = *vanilla*
+assets.mekanism.sounds = *vanilla*
+assets.mekanism.sounds.cj = *vanilla*
+assets.mekanism.sounds.etc = *vanilla*
+assets.mekanism.sounds.holiday = *vanilla*
