--- a/DevTSKAll/sources_files.cfg
+++ b/DevTSKAll/sources_files.cfg
@@ -1447,7 +1447,7 @@ assets.mekanism.lang.ru_RU = *vanilla*
 assets.mekanism.lang.zh_CN = *vanilla*
 assets.mekanism.lang.zh_TW = *vanilla*
 assets.mekanism.particles.laser = *vanilla*
-assets.mekanism.render.FadedSphere = *vanilla*
+assets.mekanism.render.FadedSphere = *project*
 assets.mekanism.render.NullArmor = *vanilla*
 assets.mekanism.render.SideConfigOverlay = *vanilla*
 assets.mekanism.render.white = *vanilla*
@@ -1500,3 +1500,207 @@ assets.mekanism.sounds.Smelter = *vanilla*
 assets.mekanism.sounds.SolarGenerator = *vanilla*
 assets.mekanism.sounds.WindTurbine = *vanilla*
 assets.mekanism.textures.blocks.models.GlowPanel = *vanilla*
+assets.mekanism.render.Flamethrower = *project*
+assets.mekanism.render.Laser = *project*
+assets.mekanism.render.LaserAmplifier = *project*
+assets.mekanism.render.LaserTractorBeam = *project*
+assets.mekanism.textures.blocks.ctm.BoilerValve = *vanilla*
+assets.mekanism.textures.blocks.ctm.BoilerValve-ctm = *vanilla*
+assets.mekanism.textures.blocks.ctm.DynamicGlass = *vanilla*
+assets.mekanism.textures.blocks.ctm.DynamicGlass-ctm = *vanilla*
+assets.mekanism.textures.blocks.ctm.InductionCellAdvanced = *project*
+assets.mekanism.textures.blocks.ctm.InductionCellAdvanced-ctm = *project*
+assets.mekanism.textures.blocks.ctm.InductionCellBasic = *project*
+assets.mekanism.textures.blocks.ctm.InductionCellBasic-ctm = *project*
+assets.mekanism.textures.blocks.ctm.InductionCellElite = *project*
+assets.mekanism.textures.blocks.ctm.InductionCellElite-ctm = *project*
+assets.mekanism.textures.blocks.ctm.InductionCellUltimate = *project*
+assets.mekanism.textures.blocks.ctm.InductionCellUltimate-ctm = *project*
+assets.mekanism.textures.blocks.ctm.InductionPortInput = *project*
+assets.mekanism.textures.blocks.ctm.InductionPortInput-ctm = *project*
+assets.mekanism.textures.blocks.ctm.InductionPortOutput = *project*
+assets.mekanism.textures.blocks.ctm.InductionPortOutput-ctm = *project*
+assets.mekanism.textures.blocks.ctm.InductionProviderAdvanced = *project*
+assets.mekanism.textures.blocks.ctm.InductionProviderAdvanced-ctm = *project*
+assets.mekanism.textures.blocks.ctm.InductionProviderBasic = *project*
+assets.mekanism.textures.blocks.ctm.InductionProviderBasic-ctm = *project*
+assets.mekanism.textures.blocks.ctm.InductionProviderElite = *project*
+assets.mekanism.textures.blocks.ctm.InductionProviderElite-ctm = *project*
+assets.mekanism.textures.blocks.ctm.InductionProviderUltimate = *project*
+assets.mekanism.textures.blocks.ctm.InductionProviderUltimate-ctm = *project*
+assets.mekanism.textures.blocks.ctm.ReactorControllerOff = *vanilla*
+assets.mekanism.textures.blocks.ctm.ReactorControllerOff-ctm = *vanilla*
+assets.mekanism.textures.blocks.ctm.ReactorControllerOn = *vanilla*
+assets.mekanism.textures.blocks.ctm.ReactorControllerOn-ctm = *vanilla*
+assets.mekanism.textures.blocks.ctm.ReactorFrame = *vanilla*
+assets.mekanism.textures.blocks.ctm.ReactorFrame-ctm = *vanilla*
+assets.mekanism.textures.blocks.ctm.ReactorGlass = *vanilla*
+assets.mekanism.textures.blocks.ctm.ReactorGlass-ctm = *vanilla*
+assets.mekanism.textures.blocks.ctm.ReactorLaserFocus = *vanilla*
+assets.mekanism.textures.blocks.ctm.ReactorLaserFocus-ctm = *vanilla*
+assets.mekanism.textures.blocks.ctm.ReactorLogicAdapter = *vanilla*
+assets.mekanism.textures.blocks.ctm.ReactorLogicAdapter-ctm = *vanilla*
+assets.mekanism.textures.blocks.ctm.ReactorNeutronCapture = *vanilla*
+assets.mekanism.textures.blocks.ctm.ReactorNeutronCapture-ctm = *vanilla*
+assets.mekanism.textures.blocks.ctm.ReactorPort = *vanilla*
+assets.mekanism.textures.blocks.ctm.ReactorPort-ctm = *vanilla*
+assets.mekanism.textures.blocks.ctm.SteamBoiler = *vanilla*
+assets.mekanism.textures.blocks.ctm.SteamBoiler-ctm = *vanilla*
+assets.mekanism.textures.blocks.ctm.Teleporter = *project*
+assets.mekanism.textures.blocks.ctm.Teleporter-ctm = *project*
+assets.mekanism.textures.blocks.ctm.TeleporterFrame = *project*
+assets.mekanism.textures.blocks.ctm.TeleporterFrame-ctm = *project*
+assets.mekanism.textures.blocks.glass.DynamicGlass_0 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_1 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_2 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_3 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_4 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_5 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_6 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_7 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_8 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_9 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_10 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_11 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_12 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_13 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_14 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_15 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_16 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_17 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_18 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_19 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_20 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_21 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_22 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_23 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_24 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_25 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_26 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_27 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_28 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_29 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_30 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_31 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_32 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_33 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_34 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_35 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_36 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_37 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_38 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_39 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_40 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_41 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_42 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_43 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_44 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_45 = *vanilla*
+assets.mekanism.textures.blocks.glass.DynamicGlass_46 = *vanilla*
+assets.mekanism.textures.blocks.models.MechanicalPipeHorizontalAdvanced = *vanilla*
+assets.mekanism.textures.blocks.models.MechanicalPipeHorizontalBasic = *vanilla*
+assets.mekanism.textures.blocks.models.MechanicalPipeHorizontalElite = *vanilla*
+assets.mekanism.textures.blocks.models.MechanicalPipeHorizontalUltimate = *vanilla*
+assets.mekanism.textures.blocks.models.MechanicalPipeVerticalAdvanced = *vanilla*
+assets.mekanism.textures.blocks.models.MechanicalPipeVerticalBasic = *vanilla*
+assets.mekanism.textures.blocks.models.MechanicalPipeVerticalElite = *vanilla*
+assets.mekanism.textures.blocks.models.MechanicalPipeVerticalUltimate = *vanilla*
+assets.mekanism.textures.blocks.models.RestrictiveTransporterHorizontal = *vanilla*
+assets.mekanism.textures.blocks.models.RestrictiveTransporterVertical = *vanilla*
+assets.mekanism.textures.blocks.models.SmallTransmitterHorizontalAdvanced = *vanilla*
+assets.mekanism.textures.blocks.models.SmallTransmitterHorizontalBasic = *vanilla*
+assets.mekanism.textures.blocks.models.SmallTransmitterHorizontalElite = *vanilla*
+assets.mekanism.textures.blocks.models.SmallTransmitterHorizontalUltimate = *vanilla*
+assets.mekanism.textures.blocks.models.SmallTransmitterVerticalAdvanced = *vanilla*
+assets.mekanism.textures.blocks.models.SmallTransmitterVerticalBasic = *vanilla*
+assets.mekanism.textures.blocks.models.SmallTransmitterVerticalElite = *vanilla*
+assets.mekanism.textures.blocks.models.SmallTransmitterVerticalUltimate = *vanilla*
+assets.mekanism.textures.blocks.AdvancedCombiningFactoryFront = *project*
+assets.mekanism.textures.blocks.AdvancedCombiningFactoryFrontOn = *project*
+assets.mekanism.textures.blocks.AdvancedCompressingFactoryFront = *project*
+assets.mekanism.textures.blocks.AdvancedCompressingFactoryFrontOn = *project*
+assets.mekanism.textures.blocks.AdvancedCrushingFactoryFront = *project*
+assets.mekanism.textures.blocks.AdvancedCrushingFactoryFrontOn = *project*
+assets.mekanism.textures.blocks.AdvancedEnrichingFactoryFront = *project*
+assets.mekanism.textures.blocks.AdvancedEnrichingFactoryFrontOn = *project*
+assets.mekanism.textures.blocks.AdvancedInjectingFactoryFront = *vanilla*
+assets.mekanism.textures.blocks.AdvancedInjectingFactoryFrontOn = *vanilla*
+assets.mekanism.textures.blocks.AdvancedPurifyingFactoryFront = *vanilla*
+assets.mekanism.textures.blocks.AdvancedPurifyingFactoryFrontOn = *vanilla*
+assets.mekanism.textures.blocks.AdvancedSmeltingFactoryFront = *vanilla*
+assets.mekanism.textures.blocks.AdvancedSmeltingFactoryFrontOn = *vanilla*
+assets.mekanism.textures.blocks.AmbientAccumulator = *vanilla*
+assets.mekanism.textures.blocks.BasicCombiningFactoryFront = *vanilla*
+assets.mekanism.textures.blocks.BasicCombiningFactoryFrontOn = *vanilla*
+assets.mekanism.textures.blocks.BasicCompressingFactoryFront = *vanilla*
+assets.mekanism.textures.blocks.BasicCompressingFactoryFrontOn = *vanilla*
+assets.mekanism.textures.blocks.BasicCrushingFactoryFront = *vanilla*
+assets.mekanism.textures.blocks.BasicCrushingFactoryFrontOn = *vanilla*
+assets.mekanism.textures.blocks.BasicEnrichingFactoryFront = *vanilla*
+assets.mekanism.textures.blocks.BasicEnrichingFactoryFrontOn = *vanilla*
+assets.mekanism.textures.blocks.BasicInjectingFactoryFront = *vanilla*
+assets.mekanism.textures.blocks.BasicInjectingFactoryFrontOn = *vanilla*
+assets.mekanism.textures.blocks.BasicPurifyingFactoryFront = *vanilla*
+assets.mekanism.textures.blocks.BasicPurifyingFactoryFrontOn = *vanilla*
+assets.mekanism.textures.blocks.BasicSmeltingFactoryFront = *vanilla*
+assets.mekanism.textures.blocks.BasicSmeltingFactoryFrontOn = *vanilla*
+assets.mekanism.textures.blocks.EliteCombiningFactoryFront = *vanilla*
+assets.mekanism.textures.blocks.EliteCombiningFactoryFrontOn = *vanilla*
+assets.mekanism.textures.blocks.EliteCompressingFactoryFront = *vanilla*
+assets.mekanism.textures.blocks.EliteCompressingFactoryFrontOn = *vanilla*
+assets.mekanism.textures.blocks.EliteCrushingFactoryFront = *vanilla*
+assets.mekanism.textures.blocks.EliteCrushingFactoryFrontOn = *vanilla*
+assets.mekanism.textures.blocks.EliteEnrichingFactoryFront = *vanilla*
+assets.mekanism.textures.blocks.EliteEnrichingFactoryFrontOn = *vanilla*
+assets.mekanism.textures.blocks.EliteInjectingFactoryFront = *vanilla*
+assets.mekanism.textures.blocks.EliteInjectingFactoryFrontOn = *vanilla*
+assets.mekanism.textures.blocks.ElitePurifyingFactoryFront = *vanilla*
+assets.mekanism.textures.blocks.ElitePurifyingFactoryFrontOn = *vanilla*
+assets.mekanism.textures.blocks.EliteSmeltingFactoryFront = *vanilla*
+assets.mekanism.textures.blocks.EliteSmeltingFactoryFrontOn = *vanilla*
+assets.mekanism.textures.blocks.InductionCasing = *vanilla*
+assets.mekanism.textures.blocks.InductionCellAdvanced = *vanilla*
+assets.mekanism.textures.blocks.InductionCellBasic = *vanilla*
+assets.mekanism.textures.blocks.InductionCellElite = *vanilla*
+assets.mekanism.textures.blocks.InductionCellUltimate = *vanilla*
+assets.mekanism.textures.blocks.InductionPortInput = *vanilla*
+assets.mekanism.textures.blocks.InductionPortOutput = *vanilla*
+assets.mekanism.textures.blocks.InductionProviderAdvanced = *vanilla*
+assets.mekanism.textures.blocks.InductionProviderBasic = *vanilla*
+assets.mekanism.textures.blocks.InductionProviderElite = *vanilla*
+assets.mekanism.textures.blocks.InductionProviderUltimate = *vanilla*
+assets.mekanism.textures.blocks.LiquidBrine = *vanilla*
+assets.mekanism.textures.blocks.LiquidChlorine = *vanilla*
+assets.mekanism.textures.blocks.LiquidCleanOre = *vanilla*
+assets.mekanism.textures.blocks.LiquidDeuterium = *vanilla*
+assets.mekanism.textures.blocks.LiquidDT = *vanilla*
+assets.mekanism.textures.blocks.LiquidEnergy = *vanilla*
+assets.mekanism.textures.blocks.LiquidEnergyStatic = *vanilla*
+assets.mekanism.textures.blocks.LiquidEthene = *vanilla*
+assets.mekanism.textures.blocks.LiquidHeat = *vanilla*
+assets.mekanism.textures.blocks.LiquidHeavyWater = *project*
+assets.mekanism.textures.blocks.LiquidHydrogen = *vanilla*
+assets.mekanism.textures.blocks.LiquidHydrogenChloride = *vanilla*
+assets.mekanism.textures.blocks.LiquidLithium = *vanilla*
+assets.mekanism.textures.blocks.LiquidOre = *vanilla*
+assets.mekanism.textures.blocks.LiquidOsmium = *vanilla*
+assets.mekanism.textures.blocks.LiquidOxygen = *vanilla*
+assets.mekanism.textures.blocks.LiquidSodium = *vanilla*
+assets.mekanism.textures.blocks.LiquidSteam = *vanilla*
+assets.mekanism.textures.blocks.LiquidStone = *vanilla*
+assets.mekanism.textures.blocks.LiquidSulfurDioxide = *vanilla*
+assets.mekanism.textures.blocks.LiquidSulfuricAcid = *vanilla*
+assets.mekanism.textures.blocks.LiquidSulfurTrioxide = *vanilla*
+assets.mekanism.textures.blocks.LiquidTritium = *vanilla*
+assets.mekanism.textures.blocks.OredictionificatorBack = *project*
+assets.mekanism.textures.blocks.WaterVapor = *vanilla*
+assets.mekanism.textures.items.WalkieTalkie_ch1 = *vanilla*
+assets.mekanism.textures.items.WalkieTalkie_ch2 = *vanilla*
+assets.mekanism.textures.items.WalkieTalkie_ch3 = *vanilla*
+assets.mekanism.textures.items.WalkieTalkie_ch4 = *vanilla*
+assets.mekanism.textures.items.WalkieTalkie_ch5 = *vanilla*
+assets.mekanism.textures.items.WalkieTalkie_ch6 = *vanilla*
+assets.mekanism.textures.items.WalkieTalkie_ch7 = *vanilla*
+assets.mekanism.textures.items.WalkieTalkie_ch8 = *vanilla*
+assets.mekanism.textures.items.WalkieTalkie_ch9 = *vanilla*
+assets.mekanism.textures.items.WalkieTalkieOff = *vanilla*
