--- a/DevTSKAll/sources_groups.cfg
+++ b/DevTSKAll/sources_groups.cfg
@@ -6,3 +6,7 @@ assets.mekanism.sounds = *vanilla*
 assets.mekanism.sounds.cj = *vanilla*
 assets.mekanism.sounds.etc = *vanilla*
 assets.mekanism.sounds.holiday = *vanilla*
+assets.mekanism.armor = *project*
+assets.mekanism.infuse = *project*
+assets.mekanism.render = *project*
+assets.mekanism.textures.items = *project*
