some things change ya know?

--- a/DevTSKAll/sources_files.cfg
+++ b/DevTSKAll/sources_files.cfg
@@ -452,8 +452,8 @@ assets.mekanism.gui.factory.GuiBasicFactory = *project*
 assets.mekanism.gui.factory.GuiEliteFactory = *project*
 assets.mekanism.gui.GuiSolarEvaporationController = *project*
 assets.mekanism.infuse.Infusions = *project*
-assets.mekanism.lang.en_GB = *vanilla*
-assets.mekanism.lang.en_US = *vanilla*
+assets.mekanism.lang.en_GB = *project*
+assets.mekanism.lang.en_US = *project*
 assets.mekanism.render.AdvancedSolarGenerator = *project*
 assets.mekanism.render.AtomicDisassembler = *project*
 assets.mekanism.render.Balloon = *project*
@@ -1447,7 +1447,7 @@ assets.mekanism.lang.ru_RU = *vanilla*
 assets.mekanism.lang.zh_CN = *vanilla*
 assets.mekanism.lang.zh_TW = *vanilla*
 assets.mekanism.particles.laser = *vanilla*
-assets.mekanism.render.FadedSphere = *project*
+assets.mekanism.render.FadedSphere = *vanilla*
 assets.mekanism.render.NullArmor = *vanilla*
 assets.mekanism.render.SideConfigOverlay = *vanilla*
 assets.mekanism.render.white = *vanilla*
@@ -1506,8 +1506,8 @@ assets.mekanism.render.LaserAmplifier = *project*
 assets.mekanism.render.LaserTractorBeam = *project*
 assets.mekanism.textures.blocks.ctm.BoilerValve = *vanilla*
 assets.mekanism.textures.blocks.ctm.BoilerValve-ctm = *vanilla*
-assets.mekanism.textures.blocks.ctm.DynamicGlass = *vanilla*
-assets.mekanism.textures.blocks.ctm.DynamicGlass-ctm = *vanilla*
+assets.mekanism.textures.blocks.ctm.DynamicGlass = *project*
+assets.mekanism.textures.blocks.ctm.DynamicGlass-ctm = *project*
 assets.mekanism.textures.blocks.ctm.InductionCellAdvanced = *project*
 assets.mekanism.textures.blocks.ctm.InductionCellAdvanced-ctm = *project*
 assets.mekanism.textures.blocks.ctm.InductionCellBasic = *project*
@@ -1704,3 +1704,79 @@ assets.mekanism.textures.items.WalkieTalkie_ch7 = *vanilla*
 assets.mekanism.textures.items.WalkieTalkie_ch8 = *vanilla*
 assets.mekanism.textures.items.WalkieTalkie_ch9 = *vanilla*
 assets.mekanism.textures.items.WalkieTalkieOff = *vanilla*
+assets.minecraft.lang.af_ZA = *vanilla*
+assets.minecraft.lang.ar_SA = *vanilla*
+assets.minecraft.lang.ast_ES = *vanilla*
+assets.minecraft.lang.az_AZ = *vanilla*
+assets.minecraft.lang.bg_BG = *vanilla*
+assets.minecraft.lang.ca_ES = *vanilla*
+assets.minecraft.lang.cs_CZ = *vanilla*
+assets.minecraft.lang.cy_GB = *vanilla*
+assets.minecraft.lang.da_DK = *vanilla*
+assets.minecraft.lang.de_DE = *vanilla*
+assets.minecraft.lang.el_GR = *vanilla*
+assets.minecraft.lang.en_AU = *vanilla*
+assets.minecraft.lang.en_CA = *vanilla*
+assets.minecraft.lang.en_GB = *vanilla*
+assets.minecraft.lang.en_IC = *vanilla*
+assets.minecraft.lang.en_PT = *vanilla*
+assets.minecraft.lang.en_US = *vanilla*
+assets.minecraft.lang.eo_UY = *vanilla*
+assets.minecraft.lang.es_AR = *vanilla*
+assets.minecraft.lang.es_ES = *vanilla*
+assets.minecraft.lang.es_MX = *vanilla*
+assets.minecraft.lang.es_UY = *vanilla*
+assets.minecraft.lang.es_VE = *vanilla*
+assets.minecraft.lang.et_EE = *vanilla*
+assets.minecraft.lang.eu_ES = *vanilla*
+assets.minecraft.lang.fa_IR = *vanilla*
+assets.minecraft.lang.fi_FI = *vanilla*
+assets.minecraft.lang.fil_PH = *vanilla*
+assets.minecraft.lang.fr_CA = *vanilla*
+assets.minecraft.lang.fr_FR = *vanilla*
+assets.minecraft.lang.ga_IE = *vanilla*
+assets.minecraft.lang.gl_ES = *vanilla*
+assets.minecraft.lang.gv_IM = *vanilla*
+assets.minecraft.lang.he_IL = *vanilla*
+assets.minecraft.lang.hi_IN = *vanilla*
+assets.minecraft.lang.hr_HR = *vanilla*
+assets.minecraft.lang.hu_HU = *vanilla*
+assets.minecraft.lang.hy_AM = *vanilla*
+assets.minecraft.lang.id_ID = *vanilla*
+assets.minecraft.lang.is_IS = *vanilla*
+assets.minecraft.lang.it_IT = *vanilla*
+assets.minecraft.lang.ja_JP = *vanilla*
+assets.minecraft.lang.ka_GE = *vanilla*
+assets.minecraft.lang.ko_KR = *vanilla*
+assets.minecraft.lang.kw_GB = *vanilla*
+assets.minecraft.lang.la_LA = *vanilla*
+assets.minecraft.lang.lb_LU = *vanilla*
+assets.minecraft.lang.lt_LT = *vanilla*
+assets.minecraft.lang.lv_LV = *vanilla*
+assets.minecraft.lang.mi_NZ = *vanilla*
+assets.minecraft.lang.ms_MY = *vanilla*
+assets.minecraft.lang.mt_MT = *vanilla*
+assets.minecraft.lang.nds_DE = *vanilla*
+assets.minecraft.lang.nl_NL = *vanilla*
+assets.minecraft.lang.nn_NO = *vanilla*
+assets.minecraft.lang.no_NO = *vanilla*
+assets.minecraft.lang.oc_FR = *vanilla*
+assets.minecraft.lang.pl_PL = *vanilla*
+assets.minecraft.lang.pt_BR = *vanilla*
+assets.minecraft.lang.pt_PT = *vanilla*
+assets.minecraft.lang.qya_AA = *vanilla*
+assets.minecraft.lang.ro_RO = *vanilla*
+assets.minecraft.lang.ru_RU = *vanilla*
+assets.minecraft.lang.se_NO = *vanilla*
+assets.minecraft.lang.sk_SK = *vanilla*
+assets.minecraft.lang.sl_SI = *vanilla*
+assets.minecraft.lang.sr_SP = *vanilla*
+assets.minecraft.lang.sv_SE = *vanilla*
+assets.minecraft.lang.th_TH = *vanilla*
+assets.minecraft.lang.tlh_AA = *vanilla*
+assets.minecraft.lang.tr_TR = *vanilla*
+assets.minecraft.lang.uk_UA = *vanilla*
+assets.minecraft.lang.val_ES = *vanilla*
+assets.minecraft.lang.vi_VN = *vanilla*
+assets.minecraft.lang.zh_CN = *vanilla*
+assets.minecraft.lang.zh_TW = *vanilla*
