--- a/DevTSKAll/sources_groups.cfg
+++ b/DevTSKAll/sources_groups.cfg
@@ -10,3 +10,6 @@ assets.mekanism.armor = *project*
 assets.mekanism.infuse = *project*
 assets.mekanism.render = *project*
 assets.mekanism.textures.items = *project*
+assets.minecraft.blockstates = *vanilla*
+assets.minecraft.lang = *vanilla*
+assets.realms = *vanilla*
