--- a/DevTSKAll/sources_files.cfg
+++ b/DevTSKAll/sources_files.cfg
@@ -1623,10 +1623,10 @@ assets.mekanism.textures.blocks.AdvancedCrushingFactoryFront = *project*
 assets.mekanism.textures.blocks.AdvancedCrushingFactoryFrontOn = *project*
 assets.mekanism.textures.blocks.AdvancedEnrichingFactoryFront = *project*
 assets.mekanism.textures.blocks.AdvancedEnrichingFactoryFrontOn = *project*
-assets.mekanism.textures.blocks.AdvancedInjectingFactoryFront = *vanilla*
-assets.mekanism.textures.blocks.AdvancedInjectingFactoryFrontOn = *vanilla*
-assets.mekanism.textures.blocks.AdvancedPurifyingFactoryFront = *vanilla*
-assets.mekanism.textures.blocks.AdvancedPurifyingFactoryFrontOn = *vanilla*
+assets.mekanism.textures.blocks.AdvancedInjectingFactoryFront = *project*
+assets.mekanism.textures.blocks.AdvancedInjectingFactoryFrontOn = *project*
+assets.mekanism.textures.blocks.AdvancedPurifyingFactoryFront = *project*
+assets.mekanism.textures.blocks.AdvancedPurifyingFactoryFrontOn = *project*
 assets.mekanism.textures.blocks.AdvancedSmeltingFactoryFront = *vanilla*
 assets.mekanism.textures.blocks.AdvancedSmeltingFactoryFrontOn = *vanilla*
 assets.mekanism.textures.blocks.AmbientAccumulator = *vanilla*
