--- a/DevTSKAll/sources_files.cfg
+++ b/DevTSKAll/sources_files.cfg
@@ -1,4 +1,4 @@
-assets.buildcraft.logo = *project*
+assets.buildcraft.logo = *vanilla*
 assets.buildcraft.textures.blocks.advworkbenchtable_bottom = *project*
 assets.buildcraft.textures.blocks.advworkbenchtable_side = *project*
 assets.buildcraft.textures.blocks.advworkbenchtable_top = *project*
@@ -521,7 +521,6 @@ assets.mekanism.textures.blocks.CardboardBoxTop = *project*
 assets.mekanism.textures.blocks.ChemicalInjectionChamberFront = *project*
 assets.mekanism.textures.blocks.ChemicalInjectionChamberFrontOff = *project*
 assets.mekanism.textures.blocks.ChemicalInjectionChamberFrontOn = *project*
-assets.mekanism.textures.blocks.Chlorine = *project*
 assets.mekanism.textures.blocks.CoalBlock = *project*
 assets.mekanism.textures.blocks.CombinerFront = *project*
 assets.mekanism.textures.blocks.CombinerFrontOff = *project*
@@ -1627,23 +1626,22 @@ assets.mekanism.textures.blocks.AdvancedInjectingFactoryFront = *project*
 assets.mekanism.textures.blocks.AdvancedInjectingFactoryFrontOn = *project*
 assets.mekanism.textures.blocks.AdvancedPurifyingFactoryFront = *project*
 assets.mekanism.textures.blocks.AdvancedPurifyingFactoryFrontOn = *project*
-assets.mekanism.textures.blocks.AdvancedSmeltingFactoryFront = *vanilla*
-assets.mekanism.textures.blocks.AdvancedSmeltingFactoryFrontOn = *vanilla*
-assets.mekanism.textures.blocks.AmbientAccumulator = *vanilla*
-assets.mekanism.textures.blocks.BasicCombiningFactoryFront = *vanilla*
-assets.mekanism.textures.blocks.BasicCombiningFactoryFrontOn = *vanilla*
-assets.mekanism.textures.blocks.BasicCompressingFactoryFront = *vanilla*
-assets.mekanism.textures.blocks.BasicCompressingFactoryFrontOn = *vanilla*
-assets.mekanism.textures.blocks.BasicCrushingFactoryFront = *vanilla*
-assets.mekanism.textures.blocks.BasicCrushingFactoryFrontOn = *vanilla*
-assets.mekanism.textures.blocks.BasicEnrichingFactoryFront = *vanilla*
-assets.mekanism.textures.blocks.BasicEnrichingFactoryFrontOn = *vanilla*
-assets.mekanism.textures.blocks.BasicInjectingFactoryFront = *vanilla*
-assets.mekanism.textures.blocks.BasicInjectingFactoryFrontOn = *vanilla*
-assets.mekanism.textures.blocks.BasicPurifyingFactoryFront = *vanilla*
-assets.mekanism.textures.blocks.BasicPurifyingFactoryFrontOn = *vanilla*
-assets.mekanism.textures.blocks.BasicSmeltingFactoryFront = *vanilla*
-assets.mekanism.textures.blocks.BasicSmeltingFactoryFrontOn = *vanilla*
+assets.mekanism.textures.blocks.AdvancedSmeltingFactoryFront = *project*
+assets.mekanism.textures.blocks.AdvancedSmeltingFactoryFrontOn = *project*
+assets.mekanism.textures.blocks.BasicCombiningFactoryFront = *project*
+assets.mekanism.textures.blocks.BasicCombiningFactoryFrontOn = *project*
+assets.mekanism.textures.blocks.BasicCompressingFactoryFront = *project*
+assets.mekanism.textures.blocks.BasicCompressingFactoryFrontOn = *project*
+assets.mekanism.textures.blocks.BasicCrushingFactoryFront = *project*
+assets.mekanism.textures.blocks.BasicCrushingFactoryFrontOn = *project*
+assets.mekanism.textures.blocks.BasicEnrichingFactoryFront = *project*
+assets.mekanism.textures.blocks.BasicEnrichingFactoryFrontOn = *project*
+assets.mekanism.textures.blocks.BasicInjectingFactoryFront = *project*
+assets.mekanism.textures.blocks.BasicInjectingFactoryFrontOn = *project*
+assets.mekanism.textures.blocks.BasicPurifyingFactoryFront = *project*
+assets.mekanism.textures.blocks.BasicPurifyingFactoryFrontOn = *project*
+assets.mekanism.textures.blocks.BasicSmeltingFactoryFront = *project*
+assets.mekanism.textures.blocks.BasicSmeltingFactoryFrontOn = *project*
 assets.mekanism.textures.blocks.EliteCombiningFactoryFront = *vanilla*
 assets.mekanism.textures.blocks.EliteCombiningFactoryFrontOn = *vanilla*
 assets.mekanism.textures.blocks.EliteCompressingFactoryFront = *vanilla*
