redstone command block wheat

--- a/DevTSKAll/sources_files.cfg
+++ b/DevTSKAll/sources_files.cfg
@@ -1778,3 +1778,4 @@ assets.minecraft.lang.val_ES = *vanilla*
 assets.minecraft.lang.vi_VN = *vanilla*
 assets.minecraft.lang.zh_CN = *vanilla*
 assets.minecraft.lang.zh_TW = *vanilla*
+assets.minecraft.textures.blocks.redstone_dust_overlay = *vanilla*
