SEB Glow Cake Water

--- a/DevTSKAll/sources_files.cfg
+++ b/DevTSKAll/sources_files.cfg
@@ -557,7 +557,6 @@ assets.mekanism.textures.blocks.EnergizedSmelterFrontOn = *project*
 assets.mekanism.textures.blocks.EnrichmentChamberFront = *project*
 assets.mekanism.textures.blocks.EnrichmentChamberFrontOff = *project*
 assets.mekanism.textures.blocks.EnrichmentChamberFrontOn = *project*
-assets.mekanism.textures.blocks.Ethene = *project*
 assets.mekanism.textures.blocks.GlowPlasticBlock = *project*
 assets.mekanism.textures.blocks.models.DiversionTransporter = *project*
 assets.mekanism.textures.blocks.models.DiversionTransporterHorizontal = *project*
@@ -1498,11 +1497,7 @@ assets.mekanism.sounds.PurificationChamber = *vanilla*
 assets.mekanism.sounds.Smelter = *vanilla*
 assets.mekanism.sounds.SolarGenerator = *vanilla*
 assets.mekanism.sounds.WindTurbine = *vanilla*
-assets.mekanism.textures.blocks.models.GlowPanel = *vanilla*
-assets.mekanism.render.Flamethrower = *project*
-assets.mekanism.render.Laser = *project*
-assets.mekanism.render.LaserAmplifier = *project*
-assets.mekanism.render.LaserTractorBeam = *project*
+assets.mekanism.textures.blocks.models.GlowPanel = *project*
 assets.mekanism.textures.blocks.ctm.BoilerValve = *vanilla*
 assets.mekanism.textures.blocks.ctm.BoilerValve-ctm = *vanilla*
 assets.mekanism.textures.blocks.ctm.DynamicGlass = *project*
@@ -1715,10 +1710,8 @@ assets.minecraft.lang.de_DE = *vanilla*
 assets.minecraft.lang.el_GR = *vanilla*
 assets.minecraft.lang.en_AU = *vanilla*
 assets.minecraft.lang.en_CA = *vanilla*
-assets.minecraft.lang.en_GB = *vanilla*
 assets.minecraft.lang.en_IC = *vanilla*
 assets.minecraft.lang.en_PT = *vanilla*
-assets.minecraft.lang.en_US = *vanilla*
 assets.minecraft.lang.eo_UY = *vanilla*
 assets.minecraft.lang.es_AR = *vanilla*
 assets.minecraft.lang.es_ES = *vanilla*
@@ -1779,3 +1772,5 @@ assets.minecraft.lang.vi_VN = *vanilla*
 assets.minecraft.lang.zh_CN = *vanilla*
 assets.minecraft.lang.zh_TW = *vanilla*
 assets.minecraft.textures.blocks.redstone_dust_overlay = *vanilla*
+assets.buildcraft.textures.blocks.transparent = *vanilla*
+assets.mekanism.textures.blocks.AmbientAccumulator = *vanilla*
