changed some stuff

--- a/DevTSKAll/sources_files.cfg
+++ b/DevTSKAll/sources_files.cfg
@@ -372,8 +372,6 @@ assets.cofh.textures.gui.elements.Energy = *project*
 assets.cofh.textures.gui.elements.FluidTank = *project*
 assets.cofh.textures.gui.elements.Progress_Arrow_Left = *project*
 assets.cofh.textures.gui.elements.Progress_Arrow_Right = *project*
-assets.cofh.textures.gui.elements.Progress_Fluid_Left = *project*
-assets.cofh.textures.gui.elements.Progress_Fluid_Right = *project*
 assets.cofh.textures.gui.elements.Scale_Alchemy = *project*
 assets.cofh.textures.gui.elements.Scale_Bubble = *project*
 assets.cofh.textures.gui.elements.Scale_Crush = *project*
@@ -1774,3 +1772,19 @@ assets.minecraft.lang.zh_TW = *vanilla*
 assets.minecraft.textures.blocks.redstone_dust_overlay = *vanilla*
 assets.buildcraft.textures.blocks.transparent = *vanilla*
 assets.mekanism.textures.blocks.AmbientAccumulator = *vanilla*
+assets.buildcraft.textures.blocks.floodgate_bottom = *vanilla*
+assets.buildcraft.textures.blocks.floodgate_side = *vanilla*
+assets.buildcraft.textures.blocks.floodgate_top = *vanilla*
+assets.cofh.textures.gui.elements.Tab_Left = *project*
+assets.cofh.textures.gui.elements.Tab_Right = *project*
+assets.cofh.textures.items.icons.Icon_ArrowDown = *project*
+assets.cofh.textures.items.icons.Icon_ArrowDown_Inactive = *project*
+assets.cofh.textures.items.icons.Icon_ArrowUp = *project*
+assets.cofh.textures.items.icons.Icon_ArrowUp_Inactive = *project*
+assets.cofh.textures.items.icons.Icon_Button = *project*
+assets.cofh.textures.items.icons.Icon_Button_Highlight = *project*
+assets.cofh.textures.items.icons.Icon_Button_Inactive = *project*
+assets.cofh.textures.items.icons.Icon_Cancel = *project*
+assets.cofh.textures.items.icons.Icon_Cancel_Inactive = *project*
+assets.cofh.textures.items.icons.Icon_Nope = *vanilla*
+assets.cofh.textures.logo = *vanilla*
