--- a/DevTSKAll/sources_groups.cfg
+++ b/DevTSKAll/sources_groups.cfg
@@ -13,3 +13,10 @@ assets.mekanism.textures.items = *project*
 assets.minecraft.blockstates = *vanilla*
 assets.minecraft.lang = *vanilla*
 assets.realms = *vanilla*
+assets.cofh = *project*
+assets.cofh.textures = *project*
+assets.cofh.textures.gui = *project*
+assets.cofh.textures.gui.elements = *project*
+assets.cofh.textures.gui.storage = *project*
+assets.cofh.textures.items = *project*
+assets.cofh.textures.items.icons = *project*
